--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,6 +2,12 @@
   box-sizing: border-box;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -14,14 +20,48 @@ body {
 
 #search-box {
   font: inherit;
+  height: 40px;
   padding: 8px;
-  max-width: 320px;
   margin-bottom: 16px;
+  font-family: 'Rubik';
+  font-weight: 400;
+  font-size: 15px;
+  padding: 10px;
+  border: 0;
+  border-radius: 20px;
+  background-color: lightgray;
 }
 
 .box {
+  width: 500px;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   margin-top: 200px;
+}
+
+.country-list {
+  width: 500px;
+}
+
+.country-list li {
+  display: flex;
+}
+
+.country-list li:not(:last-child) {
+  margin-bottom: 10px;
+}
+
+.country-list b {
+  margin-left: 10px;
+}
+
+.country-list img {
+  object-fit: scale-down;
+}
+
+.countrie-name {
+  font-size: 40px;
 }
