--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,18 +18,37 @@ body {
   line-height: 1.5;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 #search-box {
   font: inherit;
   height: 40px;
-  padding: 8px;
   margin-bottom: 16px;
   font-family: 'Rubik';
   font-weight: 400;
   font-size: 15px;
-  padding: 10px;
+  padding: 20px;
   border: 0;
   border-radius: 20px;
   background-color: lightgray;
+}
+
+#search-box::placeholder {
+  font-family: 'Rubik';
+  font-weight: 400;
+  font-size: 15px;
+  color: whitesmoke;
 }
 
 .box {
@@ -38,7 +57,6 @@ body {
   margin-right: auto;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   margin-top: 200px;
 }
 
@@ -58,7 +76,8 @@ body {
   margin-left: 10px;
 }
 
-.country-list img {
+.country-list img,
+.country-info img {
   object-fit: scale-down;
 }
 
